Release 1.3

#7 Allow TreeConstraints to be applied to insert/update requests 
#18 CreateOrUpdateBuilder
#19 Backend support for batch updates of a single entity
#20 IEncoderService to return Encoder instead of DataResponse
#21 SelectBuilder.withEntity - rename to SelectBuilder.canRead.
#23 Refactor EntityConfig and friends into 'constraints'
#24 LinkRestAdapter - a generic LR extension mechanism

Release 1.2 2013-08-01

#8 EntityConfig API improvements 
#10 Support for char PK
#11 Refactoring: rename NoRolesEntityAuthorizationEncoderFilter to EntityEncoderFilter
#12 Add 'SelectBuilder.selectOne' method
#13 'filter' processor improvements
#14 ILinkRestService API for managing relationship operations
#15 IMetadataService must throw LinkRestException on bad entities
#16 DataResponseConfig should be attached to SelectBuilder

Release 1.1

#1 Intercept Cayenne ValidationException
#3 DataResponseConfig - a server-side request template
#4 Responses for inserts should return '201 Created' instead of 200
#5 Rename ClientEntity to Entity, ClientProperty to EntityProperty
#6 Entity: convert setters to builder methods similar to EntityConfig