@@ -5,6 +5,7 @@ Release 1.3
 #19 Backend support for batch updates of a single entity
 #20 IEncoderService to return Encoder instead of DataResponse
 #21 SelectBuilder.withEntity - rename to SelectBuilder.canRead.
+#22 SenchaAdapter with Incoming id filter
 #23 Refactor EntityConfig and friends into 'constraints'
 #24 LinkRestAdapter - a generic LR extension mechanism
 
